--- a/README.adoc
+++ b/README.adoc
@@ -1,10 +1,10 @@
 
-Chameleon is an JPA and MongoDB mapping library based on Hibernate and MongoDB Java Driver.
+*Chameleon* is an JPA and MongoDB mapping library based on Hibernate and MongoDB Java Driver.
 
 image:chameleon-logo.jpg[logo, 150, 100]
 
 == JPA and MongoDB
-JPA (Jarkata Persistence API) is SQL persistence contract aiming to bridge the gap between Java OOP programming and relational database pattern mismatch.
+JPA (**J**arkata **P**ersistence **A**PI) is SQL persistence contract aiming to bridge the gap between Java OOP programming and relational database pattern mismatch.
 Hibernate library as the reference implementation of JPA is the de facto ORM framework in which
 Java developer could interact with POJO class objects whereas ORM library will take care of boilerplate JDBC steps automatically.
 
@@ -15,9 +15,19 @@ so it seems a natural candidate to enjoy some counterpart of ORM framework. Let 
 
 === Existing Open Source Libraries (active or not)
 It is not surprising Hibernate once started an ambitious project to generalize Hibernate ORM features to all NoSQL dbs.
-They call it https://github.com/hibernate/hibernate-ogm[OGM] (Object Grid Mapping) as a big umbrella supporting Infinitispan, Mongodb, Neo4j, etc.
+They call it https://github.com/hibernate/hibernate-ogm[Hibernate OGM] (**O**bject **G**rid **M**apping) as a big umbrella supporting Infinitispan, Mongodb, Neo4j, etc.
 However, it lacks some basic JPA features (e.g. Criteria and Filter) and it is not actively maintained any more and is based on outdated Hibernate v5 core library. Given the leap of faith of Hibernate
 v6 release, it is extremely challenging to revive it by integrating with v6's new query model, if possible.
+
+*Spring Data MongoDB* (https://spring.io/projects/spring-data-mongodb) is a good choice for CRUD focused tasks, but it lacks
+other JPA features, including:
+
+* OOP Inheritance Mapping
+* JP-QL or HQL
+* Criteria
+* Lazy Loading and Entity Graph
+* Second-level Cache
+* ... ...
 
 There used to be less-known libraries aiming Mongodb mapping alone every now and again, but usually they are not actively maintained as well.
 
@@ -29,7 +39,7 @@ He humbly proposed a new OMM idea and this github project is the end result. The
 * focus on providing a "Virtual JDBC Layer" on top of Mongodb's Java driver; the "Virtual JDBC Layer" will pass JSON instead of SQL though
 
 === Implementation Details
-Since Hibernate v6, a unified SQM (Semantic Query Model) was created for both JP-QL and Criteria. It is not only an elegant
+Since Hibernate v6, a unified SQM (**S**emantic **Q**uery **M**odel) was created for both JP-QL and Criteria. It is not only an elegant
 tech design but also streamlines vendor specific SQL or NoSQL statement generation. In Chameleon, we could easily create parameterized Mongodb Bson command string
 ready to be run by Mongodb java driver. The virtual JDBC layer will pass the JSON string instead of SQL between Hibernate and Mongodb server.
 No need to overwrite or bypass Hibernate's core workflow for vendor specific SQL rendering is a standardized core feature of Hibernate, and ultimately Hibernate sits on top
