--- a/README.adoc
+++ b/README.adoc
@@ -1,25 +1,24 @@
 
-*Chameleon* is an JPA and MongoDB mapping library based on Hibernate and MongoDB Java Driver.
+*Chameleon* is a JPA and MongoDB mapping library based on Hibernate and MongoDB Java Driver.
 
 image:chameleon-logo.jpg[logo, 180, 120]
 
 == JPA and MongoDB
-JPA (**J**arkata **P**ersistence **A**PI) is SQL persistence contract aiming to bridge the gap between Java OOP programming and relational database pattern mismatch.
-Hibernate library as the reference implementation of JPA is the de facto ORM framework in which
-Java developer could interact with POJO class objects whereas ORM library will take care of boilerplate JDBC steps automatically.
-
+JPA (**J**arkata **P**ersistence **A**PI) is an SQL persistence contract aiming to bridge the gap between Java OOP (**O**bject **O**riented **P**rogramming) and relational database pattern mismatch.
+Hibernate library as the reference implementation of JPA is the de facto ORM (**O**bject **R**elational **M**apping) framework in which
+Java developer could interact with POJO class objects whereas ORM library takes care of boilerplate JDBC processing automatically.
 
 MongoDB is a document NoSQL database, so seemingly JPA could not be applied directly, though the similar ORM spirit is still
-highly attractive to Java developers. Furthermore, MongoDB provides many features aligning with SQL DBs (e.g. transaction and table joining simulation by view),
-so it seems a natural candidate to enjoy some counterpart of ORM framework. Let us call it OMM (Object MongoDB Mapping) then.
+highly attractive to Java developers. Furthermore, MongoDB provides many features aligning with SQL databases (e.g. transaction, table joining simulation by view, etc.),
+so it seems a natural candidate to enjoy some benefits of ORM framework. Let us call it OMM (**O**bject **M**ongoDB **M**apping) then.
 
 === Existing Open Source Libraries (active or not)
-It is not surprising Hibernate once started an ambitious project to generalize Hibernate ORM features to all NoSQL dbs.
-They call it https://github.com/hibernate/hibernate-ogm[Hibernate OGM] (**O**bject **G**rid **M**apping) as a big umbrella supporting Infinitispan, Mongodb, Neo4j, etc.
-However, it lacks some basic JPA features (e.g. Criteria and Filter) and it is not actively maintained any more and is based on outdated Hibernate v5 core library. Given the leap of faith of Hibernate
+It is not surprising that Hibernate once started an ambitious project to generalize Hibernate ORM features to all NoSQL databases.
+They call it https://github.com/hibernate/hibernate-ogm[Hibernate OGM] (**O**bject **G**rid **M**apping) as a big umbrella including Infinitispan, MongoDB, Neo4j, etc.
+However, it lacks some basic JPA features (e.g. Criteria and Filter) and ceased to be actively maintained any more. It is based on outdated Hibernate v5 core library models. Given the leap of faith of Hibernate
 v6 release, it is extremely challenging to revive it by integrating with v6's new query model, if possible.
 
-*Spring Data MongoDB* (https://spring.io/projects/spring-data-mongodb) is a good choice for CRUD focused tasks, but it lacks
+*Spring Data MongoDB* (https://spring.io/projects/spring-data-mongodb) is a good choice for CRUD tasks, but it lacks
 other JPA features, including:
 
 * OOP Inheritance Mapping
@@ -29,7 +28,7 @@ other JPA features, including:
 * Second-level Cache
 * ... ...
 
-There used to be less-known libraries aiming Mongodb mapping alone every now and again, but usually they are not actively maintained as well.
+There used to be lesser known libraries aiming Mongodb mapping exclusively every now and again, but usually they are not actively maintained and phased out quickly.
 
 == Chameleon: a new OMM library
 The author of this library is an experienced Hibernate contributor and participated actively in both v5 and v6 development.
